--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: python
 python:
   - "2.6"
   - "2.7"
+install:
+  - pip install coveralls
 script:
   - python unit_tests.py
+after_success:
+  - coveralls
