--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install coveralls
+  - pip install python-coveralls
+  - pip install coverage
+  - pip install nose
 script:
-  - python unit_tests.py
+  - nosetests --with-coverage
 after_success:
   - coveralls
